unpackaged/main/default/objects/Downtime_Log__c/Downtime_Log__c.object-meta.xml
<CustomObject>
    <label>Downtime Log</label>
    <nameField>
        <displayFormat>DL-{0}</displayFormat>
        <label>Downtime Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Downtime Logs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>