unpackaged/main/default/objects/Downtime_Log__c/fields/Asset__c.field-meta.xml
<CustomField>
    <fullName>Asset__c</fullName>
    <label>Asset</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Asset.Asset_Type__c</field>
            <operation>equals</operation>
            <value>Engine/Compressor, Well</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Asset</referenceTo>
    <relationshipLabel>Downtime Logs</relationshipLabel>
    <relationshipName>Downtime_Logs</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>