unpackaged/main/default/objects/Downtime_Log__c/fields/Downtime_Code__c.field-meta.xml
<CustomField>
    <fullName>Downtime_Code__c</fullName>
    <label>Downtime Code</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Parent_Code__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>54</fullName>
                <label>Cat. Conv. Temp. High</label>
            </value>
            <value>
                <fullName>13</fullName>
                <label>Chemical Treatment</label>
            </value>
            <value>
                <fullName>41</fullName>
                <label>Compressor Issue</label>
            </value>
            <value>
                <fullName>35</fullName>
                <label>Compressor Issues</label>
            </value>
            <value>
                <fullName>30</fullName>
                <label>Compressor PM</label>
            </value>
            <value>
                <fullName>50</fullName>
                <label>Cooling Water Level Low</label>
            </value>
            <value>
                <fullName>47</fullName>
                <label>Cooling Water Temperature High</label>
            </value>
            <value>
                <fullName>64</fullName>
                <label>Down-hole Issue/ No Flow</label>
            </value>
            <value>
                <fullName>44</fullName>
                <label>Facility Maintenance</label>
            </value>
            <value>
                <fullName>16</fullName>
                <label>Facility  Maintenance</label>
            </value>
            <value>
                <fullName>24</fullName>
                <label>Flowline Maintenance</label>
            </value>
            <value>
                <fullName>58</fullName>
                <label>Force Majeure</label>
            </value>
            <value>
                <fullName>17</fullName>
                <label>Freezing Issue/ Hydrates</label>
            </value>
            <value>
                <fullName>21</fullName>
                <label>Fueld Gas Supply</label>
            </value>
            <value>
                <fullName>37</fullName>
                <label>Gas Lift</label>
            </value>
            <value>
                <fullName>15</fullName>
                <label>Gas  Lift</label>
            </value>
            <value>
                <fullName>10</fullName>
                <label>Gas Plant Shut-in</label>
            </value>
            <value>
                <fullName>52</fullName>
                <label>Gas Temperature High</label>
            </value>
            <value>
                <fullName>57</fullName>
                <label>High Discharge Pressure</label>
            </value>
            <value>
                <fullName>18</fullName>
                <label>High Pipeline Pressure</label>
            </value>
            <value>
                <fullName>59</fullName>
                <label>High Sales Line Pressure</label>
            </value>
            <value>
                <fullName>32</fullName>
                <label>Hot Water Operations</label>
            </value>
            <value>
                <fullName>31</fullName>
                <label>Hot-Water Operations</label>
            </value>
            <value>
                <fullName>6</fullName>
                <label>I&amp;E Issue</label>
            </value>
            <value>
                <fullName>5</fullName>
                <label>Loaded Up/ Incapable of flow</label>
            </value>
            <value>
                <fullName>45</fullName>
                <label>Lube No Flow</label>
            </value>
            <value>
                <fullName>49</fullName>
                <label>Lube Oil Level High</label>
            </value>
            <value>
                <fullName>46</fullName>
                <label>Lube Oil Pressure High</label>
            </value>
            <value>
                <fullName>53</fullName>
                <label>Lube Oil Temperature High</label>
            </value>
            <value>
                <fullName>Not In Use</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>