unpackaged/main/default/objects/Downtime_Log__c/fields/Downtime_Type__c.field-meta.xml
<CustomField>
    <fullName>Downtime_Type__c</fullName>
    <label>Downtime Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Compressor Downtime</fullName>
            </value>
            <value>
                <fullName>Well Downtime</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>