unpackaged/main/default/objects/Downtime_Log__c/fields/integration_equip_id__c.field-meta.xml
<CustomField>
    <fullName>integration_equip_id__c</fullName>
    <inlineHelpText>Value from integration file</inlineHelpText>
    <label>integration_equip_id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>