unpackaged/main/default/objects/Downtime_Log__c/fields/integration_equip_name__c.field-meta.xml
<CustomField>
    <fullName>integration_equip_name__c</fullName>
    <inlineHelpText>Value fro integration file</inlineHelpText>
    <label>integration_equip_name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>