unpackaged/main/default/objects/Downtime_Log__c/fields/integration_events__c.field-meta.xml
<CustomField>
    <fullName>integration_events__c</fullName>
    <label>integration_events</label>
    <length>255</length>
    <type>Text</type>
</CustomField>