unpackaged/main/default/objects/Downtime_Log__c/fields/integration_id__c.field-meta.xml
<CustomField>
    <fullName>integration_id__c</fullName>
    <label>integration id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>