unpackaged/main/default/objects/Downtime_Log__c/fields/integration_longest_ts__c.field-meta.xml
<CustomField>
    <fullName>integration_longest_ts__c</fullName>
    <label>integration longest_ts</label>
    <type>Date</type>
</CustomField>