unpackaged/main/default/objects/Downtime_Log__c/fields/integration_meterId__c.field-meta.xml
<CustomField>
    <fullName>integration_meterId__c</fullName>
    <label>integration meterId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>