unpackaged/main/default/objects/Downtime_Log__c/fields/intergration_flowType__c.field-meta.xml
<CustomField>
    <fullName>intergration_flowType__c</fullName>
    <label>intergration flowType</label>
    <length>255</length>
    <type>Text</type>
</CustomField>