unpackaged/main/default/objects/Downtime_Log__c/fields/longest_occur__c.field-meta.xml
<CustomField>
    <fullName>longest_occur__c</fullName>
    <label>longest_occur</label>
    <precision>17</precision>
    <scale>15</scale>
    <type>Number</type>
</CustomField>