unpackaged/main/default/objects/Downtime_Log__c/fields/Parent_Code__c.field-meta.xml
<CustomField>
    <fullName>Parent_Code__c</fullName>
    <label>Parent Code</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Downtime_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>42</fullName>
                <label>Planned</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>Planned/Subsurface</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>Planned/Surface</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>Un-Planned</label>
            </value>
            <value>
                <fullName>40</fullName>
                <label>Un-Planned/Subsurface</label>
            </value>
            <value>
                <fullName>1</fullName>
                <label>Un-Planned/Surface</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>