unpackaged/main/default/objects/Downtime_Log__c/fields/ProCount_Last_Update__c.field-meta.xml
<CustomField>
    <fullName>ProCount_Last_Update__c</fullName>
    <inlineHelpText>The date the downtime log was set to ProCount to be processed</inlineHelpText>
    <label>ProCount Last Update</label>
    <type>DateTime</type>
</CustomField>