unpackaged/main/default/objects/Downtime_Log__c/fields/raw_csv_data__c.field-meta.xml
<CustomField>
    <fullName>raw_csv_data__c</fullName>
    <description>holds the csv row from the integration data that created this record</description>
    <label>raw csv data</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>