unpackaged/main/default/objects/Downtime_Log__c/fields/Send_To_ProCount__c.field-meta.xml
<CustomField>
    <fullName>Send_To_ProCount__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check to send to ProCount</inlineHelpText>
    <label>Send To ProCount</label>
    <type>Checkbox</type>
</CustomField>