unpackaged/main/default/objects/Downtime_Log__c/fields/Unique_Id__c.field-meta.xml
<CustomField>
    <fullName>Unique_Id__c</fullName>
    <description>Used to prevent duplicate entries. Populated by a work flow rule</description>
    <externalId>true</externalId>
    <label>Unique Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>