unpackaged/main/default/objects/Downtime_Log__c/validationRules/assets_must_have_a_Equipment_Id.validationRule-meta.xml
<ValidationRule>
    <fullName>assets_must_have_a_Equipment_Id</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK(Asset__r.Equip_ID__c )</errorConditionFormula>
    <errorMessage>You must select an asset with a assigned Equip_ID__c .</errorMessage>
</ValidationRule>