unpackaged/main/default/objects/Downtime_Log__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Date__c</columns>
    <columns>integration_equip_id__c</columns>
    <columns>Asset__c</columns>
    <columns>Duration_hrs__c</columns>
    <columns>integration_equip_name__c</columns>
    <columns>Downtime_Type__c</columns>
    <columns>Downtime_Code__c</columns>
    <columns>Parent_Code__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>integration_id__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Send_To_ProCount__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Asset__c</field>
        <operation>contains</operation>
        <value>compressor</value>
    </filters>
    <label>All</label>
</ListView>