unpackaged/main/default/objects/Downtime_Log__c/listViews/Ready_for_Procount.listView-meta.xml
<ListView>
    <fullName>Ready_for_Procount</fullName>
    <columns>NAME</columns>
    <columns>Date__c</columns>
    <columns>integration_equip_id__c</columns>
    <columns>Asset__c</columns>
    <columns>Duration_hrs__c</columns>
    <columns>integration_equip_name__c</columns>
    <columns>Downtime_Type__c</columns>
    <columns>Downtime_Code__c</columns>
    <columns>Parent_Code__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Send_To_ProCount__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Ready for Procount</label>
</ListView>